# CompressedSensingNet

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: data_argumentation.py  dataset.py  model.py  test.py  train.py
