[project]
name = "mtkdeeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.2.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
